--- a/app/styles/controllers/_crosswalk.scss
+++ b/app/styles/controllers/_crosswalk.scss
@@ -1,6 +1,20 @@
 .crosswalk {
   height: calc(100vh - 110px);
 
+  .coming-soon {
+    height: calc(100vh - 150px);
+    display: table;
+    width: 100%;
+
+    h3 {
+      color: $gray;
+      text-align: center;
+      margin: 0 auto;
+      vertical-align: middle;
+      display: table-cell;
+    }
+  }
+
   .crosswalk-header {
     width: 100%;
     height: 40px;
